--- a/tg-product-list-client/index.html
+++ b/tg-product-list-client/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/tgs.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="TG shop."/>
     <title>TG Shop</title>
   </head>
   <body>
