--- a/tg-product-list-client/index.html
+++ b/tg-product-list-client/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/tgs.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="TG shop."/>
+    <link rel="preconnect" href="https://cdn.dummyjson.com">
     <title>TG Shop</title>
   </head>
   <body>
